--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'jp.wasabeef:recyclerview-animators:2.2.7'
     testCompile 'junit:junit:4.12'
+    compile 'org.osmdroid:osmdroid-android:5.6.5'
 }
