--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     compile 'jp.wasabeef:recyclerview-animators:2.2.7'
     testCompile 'junit:junit:4.12'
     compile 'org.osmdroid:osmdroid-android:5.6.5'
+    compile 'com.github.MKergall:osmbonuspack:6.4'
+
 }
