--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "mcgyvers.mobitrip"
         minSdkVersion 19
@@ -26,15 +26,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:design:26.+'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
-    compile 'com.android.support:support-v4:26.+'
+    compile 'com.android.support:support-v4:26.1.0'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.github.BlackBoxVision:datetimepicker-edittext:v0.3.3'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.android.support:cardview-v7:26.0.+'
-    compile 'com.android.support:recyclerview-v7:26.0.+'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.timqi.sectorprogressview:library:2.0.1'
     compile 'com.github.chrisbanes:PhotoView:2.1.3'
     compile 'com.google.code.gson:gson:2.8.1'
