--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
         <service android:name=".NotificationService"
             android:exported="false"/>
 
-        <receiver android:name=".BootBroadcastReceiver">
+        <receiver android:name=".Receivers.BootBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
